# probe_agent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
artifacts/: identifiability_easy.json  identifiability_hard.json  identifiability_medium.json
docs/: METHOD.md  RESULTS.md
scripts/: make_figures.py  run_experiment.py  serve.py  summarize.py
src/probe/: __init__.py  client.py  config.py  evidence.py  llm.py  trace.py
src/probe/agents/: __init__.py  base.py  eig_agent.py  hypothesis_agent.py  random_agent.py  react_agent.py
src/probe/eig/: __init__.py  candidates.py  scoring.py
src/probe/eval/: __init__.py  runner.py  scoring.py
src/probe/hypothesis/: __init__.py  predicate.py  propose.py  rules.py  space.py
src/probe/viz/: __init__.py  declassify.py  partition.py  recovery_curve.py  swarm.py  tape.py  trace_export.py
target_api/: __init__.py  contract.py  identifiability.py  server.py
target_api/variants/: __init__.py  easy.py  hard.py  medium.py
tests/: conftest.py  test_client.py  test_contract_scoring.py  test_eig.py  test_import_boundary.py  test_predicate_safety.py
